More or less complete basic frontend functionality.

--- a/frontend/src/components/home_page/HomePage.css
+++ b/frontend/src/components/home_page/HomePage.css
@@ -43,11 +43,11 @@
     justify-content: center;
 }
 
-.collapsible * {
+#config-panel .collapsible * {
     box-shadow: none !important;
 }
 
-.collapsible-body {
+#config-panel .collapsible-body {
     padding: 0;
 }
 
